--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: The Story of Paul Paulsen
 email: bjohnsonigh@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Welcome to the Tall Tales of Paul Paulsen!
-baseurl: "http://ryan258.github.io/paul" # the subpath of your site, e.g. /blog/
-url: "http://ryan258.github.io/paul" # the base hostname & protocol for your site
+baseurl: "http://ryan258.github.io/paul-story" # the subpath of your site, e.g. /blog/
+url: "http://ryan258.github.io/paul-story" # the base hostname & protocol for your site
 twitter_username: 
 github_username:
 facebook_pagename: 
